derive_macro1/crates/derive1/tests/ui/compile-fail-0.stderr
error: expected `#[rename = "name"]` attribute
 --> tests/ui/compile-fail-0.rs:4:9
  |
4 |         #[rename]
  |         ^
