derive_macro1/crates/derive1/tests/ui/compile-fail-0.rs
fn main() {
    #[derive(derive1::VariantsFn)]
    enum E {
        #[rename]
        A,
        B,
        C,
    }
}
